chore: weekly updates 2025-12-08

--- a/content/weeklies/2025-12-08.md
+++ b/content/weeklies/2025-12-08.md
@@ -130,35 +130,35 @@ draft: false
 
 ### vac:nim:
 - [`vac:nim:ift:2025q4-nimble:nimble-1.0.0`](/nim/ift/2025q4-nimble#nimble-100)
-  - [M] [nimble PR #1530](https://github.com/nim-lang/nimble/pull/1530) fixes the `^=` version operator warning; [M] [nimble PR #1529](https://github.com/nim-lang/nimble/pull/1529) cleans dependency logs; initial work to support nwaku as a library.
+  - [nimble PR #1530](https://github.com/nim-lang/nimble/pull/1530) fixes the `^=` version operator warning; [nimble PR #1529](https://github.com/nim-lang/nimble/pull/1529) cleans dependency logs; initial work to support nwaku as a library.
 - [`vac:nim:ift:2025q4-nim-core-libs:command-line-parsers`](/nim/ift/2025q4-nim-core-libs#command-line-parsers)
-  - [O] [nim-confutils PR #128](https://github.com/status-im/nim-confutils/pull/128) addresses unsigned int wrapping; [O] [PR #127](https://github.com/status-im/nim-confutils/pull/127) restores `--help/--version`; [O] [PR #126](https://github.com/status-im/nim-confutils/pull/126) adds a debug tag; created a [Core Libs inventory](https://www.notion.so/Nim-dc915d763ce64c8486b41523dc67f65b).
+  - [nim-confutils PR #128](https://github.com/status-im/nim-confutils/pull/128) addresses unsigned int wrapping; [PR #127](https://github.com/status-im/nim-confutils/pull/127) restores `--help/--version`; [PR #126](https://github.com/status-im/nim-confutils/pull/126) adds a debug tag; created a [Core Libs inventory](https://www.notion.so/Nim-dc915d763ce64c8486b41523dc67f65b).
 - [`vac:nim:ift:2025q4-nim-core-libs:cpu-integer-library`](/nim/ift/2025q4-nim-core-libs#create-standalone-cpu-integer-library)
-  - [M] [nim-intops PR #5](https://github.com/vacp2p/nim-intops/pull/5) adds 32-bit support and switches to unittest2; [O] [PR #8](https://github.com/vacp2p/nim-intops/pull/8) begins migrating stint primitives with refactors and design docs; [O] [PR #7](https://github.com/vacp2p/nim-intops/pull/7) adds carrying multiplication and muladd.
+  - [nim-intops PR #5](https://github.com/vacp2p/nim-intops/pull/5) adds 32-bit support and switches to unittest2; [PR #8](https://github.com/vacp2p/nim-intops/pull/8) begins migrating stint primitives with refactors and design docs; [PR #7](https://github.com/vacp2p/nim-intops/pull/7) adds carrying multiplication and muladd.
 - `langserver`
   - [M/O] [langserver PR #369](https://github.com/nim-lang/langserver/pull/369) and [PR #370](https://github.com/nim-lang/langserver/pull/370) document inlay hints.
 - `misc`
-  - [M] [unittest2 PR #64](https://github.com/status-im/nim-unittest2/pull/64) improves docs; reported a nimble dependency install issue: [nimble issue #1531](https://github.com/nim-lang/nimble/issues/1531).
+  - [unittest2 PR #64](https://github.com/status-im/nim-unittest2/pull/64) improves docs; reported a nimble dependency install issue: [nimble issue #1531](https://github.com/nim-lang/nimble/issues/1531).
 
 ### vac:p2p:
 - [`vac:p2p:ift:2025q4-nimlibp2p-quic:stabilization`](/p2p/ift/2025q4-nimlibp2p-quic#quic-stabilization)
-  - [O] [nim-eth PR #834](https://github.com/status-im/nim-eth/pull/834) adds multi-port NAT; [O] [nimbus-eth2 PR #7775](https://github.com/status-im/nimbus-eth2/pull/7775) WIP QUIC; [M] [nim-lsquic PR #31](https://github.com/vacp2p/nim-lsquic/pull/31) adds Windows ASM; [M] [PR #29](https://github.com/vacp2p/nim-lsquic/pull/29) uses assembly on Linux/mac; [M] [PR #27](https://github.com/vacp2p/nim-lsquic/pull/27) refactors native UDP; [M] [PR #30](https://github.com/vacp2p/nim-lsquic/pull/30) caches client certs; [M] [PR #26](https://github.com/vacp2p/nim-lsquic/pull/26) simplifies timers/locks.
+  - [nim-eth PR #834](https://github.com/status-im/nim-eth/pull/834) adds multi-port NAT; [nimbus-eth2 PR #7775](https://github.com/status-im/nimbus-eth2/pull/7775) WIP QUIC; [nim-lsquic PR #31](https://github.com/vacp2p/nim-lsquic/pull/31) adds Windows ASM; [PR #29](https://github.com/vacp2p/nim-lsquic/pull/29) uses assembly on Linux/mac; [PR #27](https://github.com/vacp2p/nim-lsquic/pull/27) refactors native UDP; [PR #30](https://github.com/vacp2p/nim-lsquic/pull/30) caches client certs; [PR #26](https://github.com/vacp2p/nim-lsquic/pull/26) simplifies timers/locks.
 - [`vac:p2p:ift:2025q4-nimlibp2p-cbindings:core`](/p2p/ift/2025q4-nimlibp2p-cbindings#core-bindings)
-  - [O] [nim-libp2p PR #1927](https://github.com/vacp2p/nim-libp2p/pull/1927) adds start/stop/connect/disconnect; [O] [PR #1931](https://github.com/vacp2p/nim-libp2p/pull/1931) adds peerInfo.
+  - [nim-libp2p PR #1927](https://github.com/vacp2p/nim-libp2p/pull/1927) adds start/stop/connect/disconnect; [PR #1931](https://github.com/vacp2p/nim-libp2p/pull/1931) adds peerInfo.
 - [`vac:p2p:ift:2025q4-nimlibp2p-cbindings:gossipsub`](/p2p/ift/2025q4-nimlibp2p-cbindings#gossipsub)
-  - [O] [nim-libp2p PR #1935](https://github.com/vacp2p/nim-libp2p/pull/1935) adds pubsub (pt1).
+  - [nim-libp2p PR #1935](https://github.com/vacp2p/nim-libp2p/pull/1935) adds pubsub (pt1).
 - `misc/admin`
-  - [O] [roadmap PR #353](https://github.com/vacp2p/roadmap/pull/353) drafts 2026Q1 commitments.
+  - [roadmap PR #353](https://github.com/vacp2p/roadmap/pull/353) drafts 2026Q1 commitments.
 - [`vac:p2p:ift:2025q4-nimlibp2p-quic:stabilization`](/p2p/ift/2025q4-nimlibp2p-quic#quic-stabilization)
-  - [O] [nim-libp2p PR #1942](https://github.com/vacp2p/nim-libp2p/pull/1942) improves gossipsub tests; [O] [PR #1934](https://github.com/vacp2p/nim-libp2p/pull/1934) removes redundant calls; [M] [PR #1938](https://github.com/vacp2p/nim-libp2p/pull/1938), [PR #1936](https://github.com/vacp2p/nim-libp2p/pull/1936), [PR #1933](https://github.com/vacp2p/nim-libp2p/pull/1933), [PR #1930](https://github.com/vacp2p/nim-libp2p/pull/1930), [PR #1924](https://github.com/vacp2p/nim-libp2p/pull/1924) harden gossipsub tests and pubsub.
+  - [nim-libp2p PR #1942](https://github.com/vacp2p/nim-libp2p/pull/1942) improves gossipsub tests; [PR #1934](https://github.com/vacp2p/nim-libp2p/pull/1934) removes redundant calls; [PR #1938](https://github.com/vacp2p/nim-libp2p/pull/1938), [PR #1936](https://github.com/vacp2p/nim-libp2p/pull/1936), [PR #1933](https://github.com/vacp2p/nim-libp2p/pull/1933), [PR #1930](https://github.com/vacp2p/nim-libp2p/pull/1930), [PR #1924](https://github.com/vacp2p/nim-libp2p/pull/1924) harden gossipsub tests and pubsub.
 
 ### vac:qa:
 - `status:2025q4-status-go-functional-testing:wallet`
-  - [O] [test: Token gated communities](https://github.com/status-im/status-go/pull/7113) under refactor; [C] [TC 7128](https://github.com/status-im/status-go/pull/7144) pending upstream resolution; [O] [issue #7167](https://github.com/status-im/status-go/issues/7167) on community changes visibility.
+  - [test: Token gated communities](https://github.com/status-im/status-go/pull/7113) under refactor; [TC 7128](https://github.com/status-im/status-go/pull/7144) pending upstream resolution; [issue #7167](https://github.com/status-im/status-go/issues/7167) on community changes visibility.
 - [`vac:2025q4-nim-libp2p-testing:flaky-tests`](/qa/vac/2025q4-nim-libp2p-testing#flaky-test-fixes)
-  - [O] [nim-libp2p PR #1939](https://github.com/vacp2p/nim-libp2p/pull/1939) organizes nimble files; [O] [issue #1941](https://github.com/vacp2p/nim-libp2p/issues/1941) and [issue #1940](https://github.com/vacp2p/nim-libp2p/issues/1940) track chronicles handling; [O] [PR #1929](https://github.com/vacp2p/nim-libp2p/pull/1929) ensures tests run without flags; [M] [PR #1932](https://github.com/vacp2p/nim-libp2p/pull/1932) reports only failed tests; [M] [PR #1928](https://github.com/vacp2p/nim-libp2p/pull/1928) stabilizes switch tests; [M] [PR #1918](https://github.com/vacp2p/nim-libp2p/pull/1918) dynamic imports; [M] [PR #1922](https://github.com/vacp2p/nim-libp2p/pull/1922) coverage ignores; [M] [PR #1920](https://github.com/vacp2p/nim-libp2p/pull/1920) log fixes.
+  - [nim-libp2p PR #1939](https://github.com/vacp2p/nim-libp2p/pull/1939) organizes nimble files; [issue #1941](https://github.com/vacp2p/nim-libp2p/issues/1941) and [issue #1940](https://github.com/vacp2p/nim-libp2p/issues/1940) track chronicles handling; [PR #1929](https://github.com/vacp2p/nim-libp2p/pull/1929) ensures tests run without flags; [PR #1932](https://github.com/vacp2p/nim-libp2p/pull/1932) reports only failed tests; [PR #1928](https://github.com/vacp2p/nim-libp2p/pull/1928) stabilizes switch tests; [PR #1918](https://github.com/vacp2p/nim-libp2p/pull/1918) dynamic imports; [PR #1922](https://github.com/vacp2p/nim-libp2p/pull/1922) coverage ignores; [PR #1920](https://github.com/vacp2p/nim-libp2p/pull/1920) log fixes.
 - [`vac:qa:status:2025q4-status-qa-desktop:maintenance`](/qa/status/2025q4-status-qa-desktop#maintenance)
-  - [M] [status-desktop PR #19406](https://github.com/status-im/status-desktop/pull/19406) Windows E2E fixes; [M] [PR #19386](https://github.com/status-im/status-desktop/pull/19386) retry popup handling.
+  - [status-desktop PR #19406](https://github.com/status-im/status-desktop/pull/19406) Windows E2E fixes; [PR #19386](https://github.com/status-im/status-desktop/pull/19386) retry popup handling.
 - [`vac:qa:status:2025q4-status-qa-desktop:app-load-time`](/qa/status/2025q4-status-qa-desktop#measure-app-load-time)
   - Continued investigation and aligned with infra; awaiting baselines from Volo.
 - [`vac:qa:status:2025q4-status-qa-desktop:release-testing`](/qa/status/2025q4-status-qa-desktop#release-testing)
@@ -166,7 +166,7 @@ draft: false
 - [`vac:qa:status:2025q4-status-qa-mobile:multi-device-support`](/qa/status/2025q4-status-qa-mobile#multi-device-support--parallel-sessions)
   - Awaiting review.
 - `status:2025q4-status-qa-mobile:port-tests`
-  - [O] [status-desktop PR #19239](https://github.com/status-im/status-desktop/pull/19239) Appium 1x1 chat tests; awaiting review.
+  - [status-desktop PR #19239](https://github.com/status-im/status-desktop/pull/19239) Appium 1x1 chat tests; awaiting review.
 - `status:2025q4-status-qa-mobile:release-testing`
   - Minor retests.
 - [`vac:qa:status:2025q4-status-qa-mobile:test-ci`](/qa/status/2025q4-status-qa-mobile#android-ci-workflow--test)
@@ -181,15 +181,15 @@ draft: false
 - [`vac:rfc:waku:2025q4-rfc-iteration:opchan`](/rfc/waku/2025q4-rfc-iteration#opchan)
   - Draft in progress; aiming for review-ready next week.
 - `vac:rfc:nomos:2025q4-rfc-iteration:message-encapsulation`
-  - [O] [rfc-index PR #218](https://github.com/vacp2p/rfc-index/pull/218) draft opened.
+  - [rfc-index PR #218](https://github.com/vacp2p/rfc-index/pull/218) draft opened.
 - `vac:rfc:nomos:2025q4-rfc-iteration:message-formatting`
-  - [O] [rfc-index PR #219](https://github.com/vacp2p/rfc-index/pull/219) draft opened.
+  - [rfc-index PR #219](https://github.com/vacp2p/rfc-index/pull/219) draft opened.
 - `vac:rfc:nomos:2025q4-rfc-iteration:blend-protocol`
-  - [O] [rfc-index PR #213](https://github.com/vacp2p/rfc-index/pull/213) updated.
+  - [rfc-index PR #213](https://github.com/vacp2p/rfc-index/pull/213) updated.
 - `vac:rfc:nomos:2025q4-rfc-iteration:proof-of-quota`
-  - [O] [rfc-index PR #217](https://github.com/vacp2p/rfc-index/pull/217) updated.
+  - [rfc-index PR #217](https://github.com/vacp2p/rfc-index/pull/217) updated.
 - `vac:rfc:nomos:2025q4-rfc-iteration:codex-prover`
-  - [M] [rfc-index PR #205](https://github.com/vacp2p/rfc-index/pull/205) feedback addressed.
+  - [rfc-index PR #205](https://github.com/vacp2p/rfc-index/pull/205) feedback addressed.
 - `vac:rfc:nomos:2025q4-rfc-iteration:block-exchange`
   - Responded to improvement feedback in [PR #215](https://github.com/vacp2p/rfc-index/pull/215).
 
@@ -232,32 +232,32 @@ draft: false
 
 ### vac:web:
 - [`vac:web:status:2025q4-status-wallet-extension:price-proxy`](/web/status/2025q4-status-wallet-extension#price-proxy)
-  - [M] [status-web PR #860](https://github.com/status-im/status-web/pull/860) reviewed proxies and data.
+  - [status-web PR #860](https://github.com/status-im/status-web/pull/860) reviewed proxies and data.
 - [`vac:web:status:2025q4-sn-hub`](/web/status/2025q4-sn-hub#staking)
-  - [O] [status-web PR #827 commit](https://github.com/status-im/status-web/pull/827/commits/ff003fcb19f872163de3975740381e9b8ca60e17) deploys Status proxy; [O] [PR #827](https://github.com/status-im/status-web/pull/827) reviews depositing; [M] [PR #873](https://github.com/status-im/status-web/pull/873) improves responsiveness and multiple hub sections; [M] [PR #816](https://github.com/status-im/status-web/pull/816) adds predeposit UI.
+  - [status-web PR #827 commit](https://github.com/status-im/status-web/pull/827/commits/ff003fcb19f872163de3975740381e9b8ca60e17) deploys Status proxy; [PR #827](https://github.com/status-im/status-web/pull/827) reviews depositing; [PR #873](https://github.com/status-im/status-web/pull/873) improves responsiveness and multiple hub sections; [PR #816](https://github.com/status-im/status-web/pull/816) adds predeposit UI.
 - `admin/misc`
-  - Off 2 days; planned CRM tasks [issue #80](https://github.com/status-im/infra-office/issues/80); prioritized wallet extension tasks ([roadmap PR #345](https://github.com/vacp2p/roadmap/pull/345/files#diff-b1393e315ba726c2827a2335aea2675cbac6f4fd91e92060076c533a9982ecd3)); tested ClickUp integration; budgeted Logos website service cost.
-  - OOO: 3 CC days.
+  - planned CRM tasks [issue #80](https://github.com/status-im/infra-office/issues/80); prioritized wallet extension tasks ([roadmap PR #345](https://github.com/vacp2p/roadmap/pull/345/files#diff-b1393e315ba726c2827a2335aea2675cbac6f4fd91e92060076c533a9982ecd3)); tested ClickUp integration; budgeted Logos website service cost.
+  - OOO: 2 CC days.
 - [`vac:web:status:2025q4-sn-hub:deposit`](/web/status/2025q4-sn-hub#deposit)
   - Added TVL to vaults via [PR #816](https://github.com/status-im/status-web/pull/816).
 - [`vac:web:status:2025q4-sn-hub:discovery`](/web/status/2025q4-sn-hub#discovery)
-  - [M] [PR #873](https://github.com/status-im/status-web/pull/873) covers Discover columns, Karma tiers/progress, staking flow locks, vault visibility rules, and token availability fixes.
+  - [PR #873](https://github.com/status-im/status-web/pull/873) covers Discover columns, Karma tiers/progress, staking flow locks, vault visibility rules, and token availability fixes.
 - [`vac:web:ift:2025q4-maintenance:maintenance`](/web/ift/2025q4-maintenance#maintenance)
-  - [O] [PR #872](https://github.com/status-im/status-web/pull/872) adds CI for non-Vercel contributors; addressed shard changes for Communities in [community-dapp PR #119](https://github.com/status-im/community-dapp/pull/119) and [status-web PR #875](https://github.com/status-im/status-web/pull/875); tested multiple deployment and API endpoint updates.
+  - [PR #872](https://github.com/status-im/status-web/pull/872) adds CI for non-Vercel contributors; addressed shard changes for Communities in [community-dapp PR #119](https://github.com/status-im/community-dapp/pull/119) and [status-web PR #875](https://github.com/status-im/status-web/pull/875); tested multiple deployment and API endpoint updates.
 - [`vac:web:status:2025q4-status-app:upgrade-waku`](/web/status/2025q4-status-app#upgrade-waku)
   - Prepared shards update in [status-web PR #875](https://github.com/status-im/status-web/pull/875).
 - [`vac:web:status:2025q4-status-wallet-extension:token-proxy`](/web/status/2025q4-status-wallet-extension#token-proxy)
-  - [O] [status-web PR #877](https://github.com/status-im/status-web/pull/877) fixes incorrect wallet data.
+  - [status-web PR #877](https://github.com/status-im/status-web/pull/877) fixes incorrect wallet data.
 - [`vac:web:ift:2025q4-logos-website:layout`](/web/ift/2025q4-logos-website#layout)
-  - [M] [logos PR #17](https://github.com/acid-info/logos/pull/17) adds Luma calendar embed; upgraded Next.js for CVE mitigation in [commit](https://github.com/acid-info/logos/commit/9e8716be86bdf6b98b1ea64703aeeed5fc5a8cf5).
+  - [logos PR #17](https://github.com/acid-info/logos/pull/17) adds Luma calendar embed; upgraded Next.js for CVE mitigation in [commit](https://github.com/acid-info/logos/commit/9e8716be86bdf6b98b1ea64703aeeed5fc5a8cf5).
 - [`vac:web:ift:2025q4-logos-website:spaces-calendar`](/web/ift/2025q4-logos-website#spaces-calendar)
-  - [O] [admin-acid.logos.co PR #25](https://github.com/acid-info/admin-acid.logos.co/pull/25/commits) adds horizontal scrolling; metrics fields added in [commit](https://github.com/acid-info/admin-acid.logos.co/pull/25/commits/5d8c88cf13cad618d392d84768d618c51f1d4399).
+  - [admin-acid.logos.co PR #25](https://github.com/acid-info/admin-acid.logos.co/pull/25/commits) adds horizontal scrolling; metrics fields added in [commit](https://github.com/acid-info/admin-acid.logos.co/pull/25/commits/5d8c88cf13cad618d392d84768d618c51f1d4399).
 - [`vac:web:ift:2025q4-psf-website:website`](/web/ift/2025q4-psf-website#website)
-  - [O] UI/media updates in [ps.logos.co PR #13](https://github.com/acid-info/ps.logos.co/pull/13) ([preview](https://psf-logos-co-git-background-acidinfo.vercel.app/)).
+  - UI/media updates in [ps.logos.co PR #13](https://github.com/acid-info/ps.logos.co/pull/13) ([preview](https://psf-logos-co-git-background-acidinfo.vercel.app/)).
 - [`vac:web:status:2025q4-sn-hub:feedback`](/web/status/2025q4-sn-hub#feedback)
-  - [M] [status-web PR #876](https://github.com/status-im/status-web/pull/876) UI updates from Figma.
+  - [status-web PR #876](https://github.com/status-im/status-web/pull/876) UI updates from Figma.
 - [`vac:web:ift:2025q4-maintenance:maintenance`](/web/ift/2025q4-maintenance#maintenance)
-  - [M] [status-software-legal-documents PR #21](https://github.com/status-im/status-software-legal-documents/pull/21) updates privacy policy; addressed Next.js CVEs across Logos.co, Press Engine, and Contribute Portal; synced admin-acid environments with infra.
+  - [status-software-legal-documents PR #21](https://github.com/status-im/status-software-legal-documents/pull/21) updates privacy policy; addressed Next.js CVEs across Logos.co, Press Engine, and Contribute Portal; synced admin-acid environments with infra.
 
 ### vac:bi:
 - Team mostly Out of office
