--- a/content/weeklies/2025-12-15.md
+++ b/content/weeklies/2025-12-15.md
@@ -56,36 +56,36 @@ draft: false
 - Web: LI.FI wallet extension integration progressed; provider connection still open.
 
 ### vac:bi:
-- `vac:bi:ift:2025q4-comms-discord-stats`
+- [`vac:bi:ift:2025q4-comms-discord-stats`](/bi/ift/2025q4-comms-discord-stats#channel-analytics-delivery)
   - Fixed Keycard data transformation.
-- `vac:bi:logos:2025q4-logos-circle-dashboard`
+- [`vac:bi:logos:2025q4-logos-circle-dashboard`](/bi/logos/2025q4-logos-circle-dashboard#circle-dashboard-delivery)
   - Improved data and dashboard quality.
 - `blockchain analytics`
   - Researched and tested smart contract data extraction.
 - `vac:bi:rag:2025q4-rag-context`
   - Tested vLLM deployment.
 
-### vac:dst:
+-### vac:dst:
 - `admin/misc`
   - OOO: 2 CC days.
   - Prepared DST retro and research call; opened commitments PR [roadmap#344](https://github.com/vacp2p/roadmap/pull/344).
-- `vac:dst:waku:2025q4-waku-scaling:twn-supports-rln-tree`
+- [`vac:dst:waku:2025q4-waku-scaling:twn-supports-rln-tree`](/dst/waku/2025q4-waku-scaling#twn-supports-rln-onchain-tree-and-deposits-existing-memberships-only)
   - Ran benchmarks and published report ([Notion](https://www.notion.so/RLN-report-TWN-supports-RLN-tree-2c68f96fb65c8018bc9fdcb149bbeb62)).
-- `vac:dst:status:2025q4-status-evaluation:chat-protocol-benchmarks-followup`
+- [`vac:dst:status:2025q4-status-evaluation:chat-protocol-benchmarks-followup`](/dst/status/2025q4-status-evaluation#chat-protocol-benchmarks-followup)
   - Applied Waku fixes, evaluated light/relay nodes, and refactored async paths.
-- `vac:dst:waku:2025q4-waku-scaling:optimise-browser-bootstrapping`
+- [`vac:dst:waku:2025q4-waku-scaling:optimise-browser-bootstrapping`](/dst/waku/2025q4-waku-scaling#optimise-browser-bootstrapping)
   - Fixed lightpush fallback by upgrading nwaku and documented findings ([Notion](https://www.notion.so/Js-Waku-logs-2be8f96fb65c80e287f9dba2ebe5017c), [Discord](https://discord.com/channels/1110799176264056863/1442545218954985513/1447995922909761566)).
-- `vac:dst:waku:2025q4-waku-evaluation:nwaku-api-image`
+- [`vac:dst:waku:2025q4-waku-evaluation:nwaku-api-image`](/dst/waku/2025q4-waku-evaluation#nwaku-api-docker-image)
   - Drafted refactor with config-driven requests, node IP handling, and base64 payload fixes ([pod-api-requester#2](https://github.com/vacp2p/pod-api-requester/pull/2)).
-- `vac:dst:ift:2025q4-dst-tooling:general-tooling`
+- [`vac:dst:ift:2025q4-dst-tooling:general-tooling`](/dst/ift/2025q4-dst-tooling#general-tooling-recurring)
   - Updated libp2p test nodes with Mix support and documentation ([dst-libp2p-test-node#9](https://github.com/vacp2p/dst-libp2p-test-node/pull/9), [#12](https://github.com/vacp2p/dst-libp2p-test-node/pull/12)).
-- `vac:dst:waku:2025q4-waku-evaluation:nwaku-v0.37-bandwidth-regression`
+- [`vac:dst:waku:2025q4-waku-evaluation:nwaku-v0.37-bandwidth-regression`](/dst/waku/2025q4-waku-evaluation#nwaku-v0-37-bandwidth-regression)
   - Ran bandwidth experiments and logged results ([Notion](https://www.notion.so/1K-Relay-3-Bootstrap-Nodes-2bb8f96fb65c8036b66ef85fff17c515), [Discord](https://discord.com/channels/864066763682218004/1443602126034043071)).
-- `vac:dst:waku:2025q4-waku-evaluation:nwaku-v0.37-store-regression`
+- [`vac:dst:waku:2025q4-waku-evaluation:nwaku-v0.37-store-regression`](/dst/waku/2025q4-waku-evaluation#nwaku-v0-37-store-regression)
   - Investigated store message issues and scenarios ([Notion](https://www.notion.so/Get-Store-Messages-Issue-2bb8f96fb65c80bc8e0fdb7801cd0c79), [Notion](https://www.notion.so/Scenario1-Experiments-nwaku-v0-37-1-beta-2ca8f96fb65c800c9622f902aeecc89e), [Discord](https://discord.com/channels/864066763682218004/1446533711028814048)).
-- `vac:dst:ift:2025q4-dst-lab:local-lab`
+- [`vac:dst:ift:2025q4-dst-lab:local-lab`](/dst/ift/2025q4-dst-lab#local-lab)
   - Merged dashboard import exclusions ([vaclab-local#2](https://github.com/vacp2p/vaclab-local/pull/2)).
-- `vac:dst:ift:2025q4-dst-lab:lab-duplication`
+- [`vac:dst:ift:2025q4-dst-lab:lab-duplication`](/dst/ift/2025q4-dst-lab#lab-duplication)
   - Compared CNIs, documented Vaclab stack, and proposed networking approach ([Notion](https://www.notion.so/Vaclab-2-0-Multi-tenancy-Pod-Networking-2c98f96fb65c817c819ffc0923d28092), [Notion](https://www.notion.so/Vaclab-1-0-Current-Stack-2c98f96fb65c8020abadfcb9494a9711)).
 
 ### vac:infra:
@@ -109,11 +109,11 @@ draft: false
   - Decommissioned old Nomos host.
 
 ### vac:nim:
-- `vac:nim:waku:2025q4-waku-nimble-integration:integration-support`
+- [`vac:nim:waku:2025q4-waku-nimble-integration:integration-support`](/nim/waku/2025q4-waku-nimble-integration#waku-nimble-integration-support)
   - Fixed lockfile handling, case sensitivity, tag/version mismatches, and large package installs ([nimble#1535](https://github.com/nim-lang/nimble/pull/1535), [#1534](https://github.com/nim-lang/nimble/pull/1534), [#1533](https://github.com/nim-lang/nimble/pull/1533), [#1532](https://github.com/nim-lang/nimble/pull/1532)).
-- `vac:nim:ift:2025q4-nim-core-libs:command-line-parsers`
+- [`vac:nim:ift:2025q4-nim-core-libs:command-line-parsers`](/nim/ift/2025q4-nim-core-libs#command-line-parsers)
   - Delivered confutils fixes and docs ([nimbus-eth2#7803](https://github.com/status-im/nimbus-eth2/pull/7803), [nim-confutils#130](https://github.com/status-im/nim-confutils/pull/130), [#126](https://github.com/status-im/nim-confutils/pull/126), [#129](https://github.com/status-im/nim-confutils/pull/129), [#127](https://github.com/status-im/nim-confutils/pull/127), [#128](https://github.com/status-im/nim-confutils/pull/128)).
-- `vac:nim:ift:2025q4-nim-core-libs:cpu-integer-library`
+- [`vac:nim:ift:2025q4-nim-core-libs:cpu-integer-library`](/nim/ift/2025q4-nim-core-libs#create-standalone-cpu-integer-library)
   - Submitted tech design and copied missing operations into intops ([nim-intops#8](https://github.com/vacp2p/nim-intops/pull/8)).
 - `langserver`
   - Investigated graceful shutdown handling and debugging approaches ([langserver#358](https://github.com/nim-lang/langserver/issues/358), [langserver#351](https://github.com/nim-lang/langserver/issues/351), [langserver#372](https://github.com/nim-lang/langserver/pull/372)).
@@ -143,47 +143,47 @@ draft: false
   - Continued review of native token concerns ([Notion](https://www.notion.so/Native-token-concerns-2b98f96fb65c8032a58acda34e6f4821#2b98f96fb65c80cfb535e804eea47402)).
 
 ### vac:p2p:
-- `vac:p2p:ift:2025q4-nimlibp2p-cbindings:kademlia`
+- [`vac:p2p:ift:2025q4-nimlibp2p-cbindings:kademlia`](/p2p/ift/2025q4-nimlibp2p-cbindings#kademlia)
   - Added Kademlia bindings and topic handler updates ([nim-libp2p#1960](https://github.com/vacp2p/nim-libp2p/pull/1960), [#1956](https://github.com/vacp2p/nim-libp2p/pull/1956), [#1964](https://github.com/vacp2p/nim-libp2p/pull/1964), [#1955](https://github.com/vacp2p/nim-libp2p/pull/1955)).
-- `vac:p2p:ift:2025q4-nimlibp2p-cbindings:gossipsub`
+- [`vac:p2p:ift:2025q4-nimlibp2p-cbindings:gossipsub`](/p2p/ift/2025q4-nimlibp2p-cbindings#gossipsub)
   - Added pubsub support ([nim-libp2p#1935](https://github.com/vacp2p/nim-libp2p/pull/1935)).
-- `vac:p2p:ift:2025q4-nimlibp2p-cbindings:core`
+- [`vac:p2p:ift:2025q4-nimlibp2p-cbindings:core`](/p2p/ift/2025q4-nimlibp2p-cbindings#core-bindings)
   - Delivered peer info and lifecycle controls ([nim-libp2p#1931](https://github.com/vacp2p/nim-libp2p/pull/1931), [#1927](https://github.com/vacp2p/nim-libp2p/pull/1927)).
-- `vac:p2p:ift:2025q4-nimlibp2p-quic:stabilization`
+- [`vac:p2p:ift:2025q4-nimlibp2p-quic:stabilization`](/p2p/ift/2025q4-nimlibp2p-quic#quic-stabilization)
   - Advanced QUIC integration with concurrent stream closing and transport updates ([nim-libp2p#1966](https://github.com/vacp2p/nim-libp2p/pull/1966), [nim-eth#835](https://github.com/status-im/nim-eth/pull/835), [nim-eth#834](https://github.com/status-im/nim-eth/pull/834), [nim-lsquic#33](https://github.com/vacp2p/nim-lsquic/pull/33), [nim-libp2p#1876](https://github.com/vacp2p/nim-libp2p/pull/1876), [nimbus-eth2#7775](https://github.com/status-im/nimbus-eth2/pull/7775)).
-- `vac:p2p:ift:2025q4-nimlibp2p-maintenance:maintenance`
+- [`vac:p2p:ift:2025q4-nimlibp2p-maintenance:maintenance`](/p2p/ift/2025q4-nimlibp2p-maintenance#maintenance)
   - Switched to chronos AsyncSemaphore and stabilized imports ([nim-libp2p#1957](https://github.com/vacp2p/nim-libp2p/pull/1957), [#1967](https://github.com/vacp2p/nim-libp2p/pull/1967)).
-- `vac:p2p:ift:2025q4-nimlibp2p-kad-dht:interop`
+- [`vac:p2p:ift:2025q4-nimlibp2p-kad-dht:interop`](/p2p/ift/2025q4-nimlibp2p-kad-dht#interop)
   - Continued interop test coverage ([nim-libp2p#1902](https://github.com/vacp2p/nim-libp2p/pull/1902)).
 
 ### vac:qa:
-- `vac:qa:waku:2025q4-waku-testing:maintenance`
+- [`vac:qa:waku:2025q4-waku-testing:maintenance`](/qa/waku/2025q4-waku-testing#maintenance)
   - Merged interop maintenance fixes in [logos-messaging-interop-tests#144](https://github.com/logos-messaging/logos-messaging-interop-tests/pull/144), [#143](https://github.com/logos-messaging/logos-messaging-interop-tests/pull/143), and [#145](https://github.com/logos-messaging/logos-messaging-interop-tests/pull/145).
-- `status:2025q4-status-go-functional-testing:wallet`
+- [`vac:qa:status:2025q4-status-go-functional-testing:wallet`](/qa/status/2025q4-status-go-functional-testing#wallet-features)
   - Added token-gated community tests ([status-go#7113](https://github.com/status-im/status-go/pull/7113)) and PoC follow-up ([status-go#7187](https://github.com/status-im/status-go/pull/7187)).
-- `vac:qa:nomos:2025q4-e2e-testing:maintenance`
+- [`vac:qa:nomos:2025q4-e2e-testing:maintenance`](/qa/nomos/2025q4-e2e-testing#maintenance)
   - Updated paths for repo rename in [logos-blockchain-e2e-tests#21](https://github.com/logos-blockchain/logos-blockchain-e2e-tests/pull/21).
 - `vac:2025q4-nim-libp2p-testing:flaky-tests`
   - Landed gossipsub and pubsub stability fixes across [nim-libp2p#1962](https://github.com/vacp2p/nim-libp2p/pull/1962), [#1961](https://github.com/vacp2p/nim-libp2p/pull/1961), [#1958](https://github.com/vacp2p/nim-libp2p/pull/1958), [#1949](https://github.com/vacp2p/nim-libp2p/pull/1949), [#1939](https://github.com/vacp2p/nim-libp2p/pull/1939), and [#1929](https://github.com/vacp2p/nim-libp2p/pull/1929).
 - `vac:2025q4-nim-libp2p-testing:test-plans`
   - Started drafting Mix protocol test plan.
-- `vac:qa:status:2025q4-status-qa-desktop:release-testing`
+- [`vac:qa:status:2025q4-status-qa-desktop:release-testing`](/qa/status/2025q4-status-qa-desktop#release-testing)
   - Assisted Status Desktop 2.36 release validation ([status-desktop#18965](https://github.com/status-im/status-desktop/pull/18965)).
 - `status:2025q4-status-qa-mobile:release-testing`
   - Tested Keycard info drawer for Android in [status-desktop#19549](https://github.com/status-im/status-desktop/pull/19549).
-- `vac:qa:status:2025q4-status-qa-mobile:multi-device-support`
+- [`vac:qa:status:2025q4-status-qa-mobile:multi-device-support`](/qa/status/2025q4-status-qa-mobile#multi-device-support--parallel-sessions)
   - Coordinated merges of dependencies ([status-desktop#19239](https://github.com/status-im/status-desktop/pull/19239), [#19163](https://github.com/status-im/status-desktop/pull/19163), [#19310](https://github.com/status-im/status-desktop/pull/19310)).
 - `status:2025q4-status-qa-mobile:port-tests`
   - Progressed Appium chat tests in [status-desktop#19239](https://github.com/status-im/status-desktop/pull/19239) with dependencies noted.
-- `vac:qa:status:2025q4-status-qa-mobile:test-ci`
+- [`vac:qa:status:2025q4-status-qa-mobile:test-ci`](/qa/status/2025q4-status-qa-mobile#android-ci-workflow--test)
   - Shared details for mobile e2e CI setup (see [infra-ci#222](https://github.com/status-im/infra-ci/issues/222) and [status-desktop#19163](https://github.com/status-im/status-desktop/pull/19163)).
 - `status:2025q4-status-go-functional-testing:maintenance`
   - Merged fixture cleanup in [status-go#7176](https://github.com/status-im/status-go/pull/7176) and continued container refactor in [status-go#7202](https://github.com/status-im/status-go/pull/7202).
 
 ### vac:rfc:
-- `vac:rfc:ift:2025q4-rfc-index-maintenance:maintenance`
+- [`vac:rfc:ift:2025q4-rfc-index-maintenance:maintenance`](/rfc/ift/2025q4-rfc-index-maintenance#maintenance)
   - Responded to feedback and reviews.
-- `vac:rfc:waku:2025q4-rfc-iteration:opchan`
+- [`vac:rfc:waku:2025q4-rfc-iteration:opchan`](/rfc/waku/2025q4-rfc-iteration#opchan)
   - Advanced draft toward review ([logos-messaging/specs#98](https://github.com/logos-messaging/specs/pull/98)).
 - `vac:rfc:waku:updates`
   - Started updates for 34/WAKU2-PEER-EXCHANGE.
@@ -199,7 +199,7 @@ draft: false
   - Merged updates ([rfc-index#215](https://github.com/vacp2p/rfc-index/pull/215)).
 
 ### vac:sc:
-- `vac:sc:status-l2:2025q4-maintaining-status-l2-contracts:maintenance`
+- [`vac:sc:status-l2:2025q4-maintaining-status-l2-contracts:maintenance`](/sc/status-l2/2025q4-maintaining-status-l2-contracts#contract-maintenance-recurring)
   - Merged audit fixes for StakeManager/StakeVault/Karma ([status-network-monorepo#107](https://github.com/status-im/status-network-monorepo/pull/107), [#103](https://github.com/status-im/status-network-monorepo/pull/103), [#84](https://github.com/status-im/status-network-monorepo/pull/84), [#87](https://github.com/status-im/status-network-monorepo/pull/87), [#86](https://github.com/status-im/status-network-monorepo/pull/86)).
   - Opened additional fixes and helpers ([status-network-monorepo#104](https://github.com/status-im/status-network-monorepo/pull/104), [#105](https://github.com/status-im/status-network-monorepo/pull/105), [#106](https://github.com/status-im/status-network-monorepo/pull/106)).
   - Progressed per-user vault limits and Karma protections ([status-network-monorepo#88](https://github.com/status-im/status-network-monorepo/pull/88), [#96](https://github.com/status-im/status-network-monorepo/pull/96), [#95](https://github.com/status-im/status-network-monorepo/pull/95), [#93](https://github.com/status-im/status-network-monorepo/pull/93), [#92](https://github.com/status-im/status-network-monorepo/pull/92), [#89](https://github.com/status-im/status-network-monorepo/pull/89), [#85](https://github.com/status-im/status-network-monorepo/pull/85)).
@@ -247,13 +247,13 @@ draft: false
   - Read Juan’s thesis for context.
 
 ### vac:web:
-- `vac:web:status:2025q4-status-app:upgrade-waku`
+- [`vac:web:status:2025q4-status-app:upgrade-waku`](/web/status/2025q4-status-app#upgrade-waku)
   - Reviewed shard fixes in [status-web#875](https://github.com/status-im/status-web/pull/875) and debugged shard behaviour in [community-dapp#119](https://github.com/status-im/community-dapp/pull/119).
 - `admin/misc`
   - OOO: 1 CC day.
   - Ran retro ([notes](https://www.notion.so/Retrospective-2ca8f96fb65c8053bf6dda8f4033d28c)), refined commitments ([roadmap#345](https://github.com/vacp2p/roadmap/pull/345)), and planned CMS/SEO plus contribute portal work ([Discord](https://discord.com/channels/864066763682218004/1420097240738824212/1447615524010725496)).
   - Upgraded ps.logos ([ps.logos.co#15](https://github.com/acid-info/ps.logos.co/pull/15), [ps.logos.co#14](https://github.com/acid-info/ps.logos.co/pull/14)), status-web ([status-web#878](https://github.com/status-im/status-web/pull/878)), and publishing docs ([status-web#880](https://github.com/status-im/status-web/pull/880)).
-- `vac:web:ift:2025q4-maintenance:maintenance`
+- [`vac:web:ift:2025q4-maintenance:maintenance`](/web/ift/2025q4-maintenance#maintenance)
   - Hardened Next.js against critical vulnerabilities ([status-web#886](https://github.com/status-im/status-web/pull/886)) and prepared preview deploys for contributors ([status-web#872](https://github.com/status-im/status-web/pull/872)).
   - Updated Logos Press Engine assets and OG rendering ([logos-press-engine#248](https://github.com/acid-info/logos-press-engine/pull/248), [logos-press-engine#247](https://github.com/acid-info/logos-press-engine/pull/247)).
 - `vac:web:status:2025q4-sn-hub`
@@ -262,15 +262,15 @@ draft: false
   - Renamed repository in [status-web#862](https://github.com/status-im/status-web/pull/862).
 - `vac:web:keycard:2025q4-keycard-website:maintenance`
   - Patched Next.js vulnerabilities in [keycard-website#153](https://github.com/keycard-tech/keycard-website/pull/153).
-- `vac:web:status:2025q4-status-wallet-extension:price-proxy`
+- [`vac:web:status:2025q4-status-wallet-extension:price-proxy`](/web/status/2025q4-status-wallet-extension#price-proxy)
   - Added Suspense and optimized token detail loading in [status-web#869](https://github.com/status-im/status-web/pull/869).
-- `vac:web:ift:2025q4-logos-website:spaces-calendar`
+- [`vac:web:ift:2025q4-logos-website:spaces-calendar`](/web/ift/2025q4-logos-website#spaces-calendar)
   - Refactored table and search UX, added optional fields, and strengthened migrations in [admin-acid.logos.co#25](https://github.com/acid-info/admin-acid.logos.co/pull/25).
-- `vac:web:ift:2025q4-logos-contributions-portal:contributor-directory`
+- [`vac:web:ift:2025q4-logos-contributions-portal:contributor-directory`](/web/ift/2025q4-logos-contributions-portal#contributor-directory)
   - Improved static export compatibility and UI components ([contribute.logos.co#27](https://github.com/acid-info/contribute.logos.co/pull/27), [contribute.logos.co#25](https://github.com/acid-info/contribute.logos.co/pull/25)).
-- `vac:web:ift:2025q4-logos-website:layout`
+- [`vac:web:ift:2025q4-logos-website:layout`](/web/ift/2025q4-logos-website#layout)
   - Tuned WideMedia layout and copy updates ([logos#23](https://github.com/acid-info/logos/pull/23), [logos#21](https://github.com/acid-info/logos/pull/21), [logos#20](https://github.com/acid-info/logos/pull/20)).
-- `vac:web:ift:2025q4-logos-website:social-proof`
+- [`vac:web:ift:2025q4-logos-website:social-proof`](/web/ift/2025q4-logos-website#social-proof)
   - Requested refreshed GitHub and Discord data ([data-docs#127](https://github.com/status-im/data-docs/issues/127), [Discord thread](https://discord.com/channels/973324189794697286/1270830210526220411/1448850184099332116)).
 - `vac:web:status:2025q4-status-wallet-extension`
   - Integrated LI.FI widget UI while continuing provider hookup ([status-web#697](https://github.com/status-im/status-web/issues/697)).
