chore: weekly updates 2025-12-15

--- a/content/weeklies/2025-12-15.md
+++ b/content/weeklies/2025-12-15.md
@@ -189,13 +189,13 @@ draft: false
   - Started updates for 34/WAKU2-PEER-EXCHANGE.
 - `admin/misc`
   - Reviewed Codex PRs and refreshed commitments.
-- `vac:rfc:nomos:2025q4-rfc-iteration:payload-formatting`
+- [`vac:rfc:nomos:2025q4-rfc-iteration:payload-formatting`](/rfc/nomos/2025q4-rfc-iteration#payload-formatting)
   - Opened draft ([rfc-index#226](https://github.com/vacp2p/rfc-index/pull/226)).
-- `vac:rfc:nomos:2025q4-rfc-iteration:cryptarchia-protocol`
+- [`vac:rfc:nomos:2025q4-rfc-iteration:cryptarchia-protocol`](/rfc/nomos/2025q4-rfc-iteration#cryptarchia-v1-protocol-specification)
   - Opened draft ([rfc-index#227](https://github.com/vacp2p/rfc-index/pull/227)).
 - `vac:rfc:nomos:2025q4-rfc-iteration`
   - Cleaned earlier Nomos PRs for review.
-- `vac:rfc:nomos:2025q4-rfc-iteration:block-exchange`
+- [`vac:rfc:nomos:2025q4-rfc-iteration:block-exchange`](/rfc/nomos/2025q4-rfc-iteration#block-exchange)
   - Merged updates ([rfc-index#215](https://github.com/vacp2p/rfc-index/pull/215)).
 
 ### vac:sc:
@@ -256,11 +256,11 @@ draft: false
 - [`vac:web:ift:2025q4-maintenance:maintenance`](/web/ift/2025q4-maintenance#maintenance)
   - Hardened Next.js against critical vulnerabilities ([status-web#886](https://github.com/status-im/status-web/pull/886)) and prepared preview deploys for contributors ([status-web#872](https://github.com/status-im/status-web/pull/872)).
   - Updated Logos Press Engine assets and OG rendering ([logos-press-engine#248](https://github.com/acid-info/logos-press-engine/pull/248), [logos-press-engine#247](https://github.com/acid-info/logos-press-engine/pull/247)).
-- `vac:web:status:2025q4-sn-hub`
+- [`vac:web:status:2025q4-sn-hub:discovery`](/web/status/2025q4-sn-hub#discovery)
   - Released with design tweaks and bug fixes via [status-web#827](https://github.com/status-im/status-web/pull/827) and [status-web#887](https://github.com/status-im/status-web/pull/887).
 - `vac:web:ift:2025q4-status-website:maintenance`
   - Renamed repository in [status-web#862](https://github.com/status-im/status-web/pull/862).
-- `vac:web:keycard:2025q4-keycard-website:maintenance`
+- [`vac:web:keycard:2025q4-keycard-website:maintenance`](/web/keycard/2025q4-keycard-website#maintenance)
   - Patched Next.js vulnerabilities in [keycard-website#153](https://github.com/keycard-tech/keycard-website/pull/153).
 - [`vac:web:status:2025q4-status-wallet-extension:price-proxy`](/web/status/2025q4-status-wallet-extension#price-proxy)
   - Added Suspense and optimized token detail loading in [status-web#869](https://github.com/status-im/status-web/pull/869).
@@ -272,5 +272,5 @@ draft: false
   - Tuned WideMedia layout and copy updates ([logos#23](https://github.com/acid-info/logos/pull/23), [logos#21](https://github.com/acid-info/logos/pull/21), [logos#20](https://github.com/acid-info/logos/pull/20)).
 - [`vac:web:ift:2025q4-logos-website:social-proof`](/web/ift/2025q4-logos-website#social-proof)
   - Requested refreshed GitHub and Discord data ([data-docs#127](https://github.com/status-im/data-docs/issues/127), [Discord thread](https://discord.com/channels/973324189794697286/1270830210526220411/1448850184099332116)).
-- `vac:web:status:2025q4-status-wallet-extension`
+- [`vac:web:status:2025q4-status-wallet-extension:price-proxy`](/web/status/2025q4-status-wallet-extension#price-proxy)
   - Integrated LI.FI widget UI while continuing provider hookup ([status-web#697](https://github.com/status-im/status-web/issues/697)).
