chore: weekly updates 2025-12-15

--- a/content/weeklies/2025-12-15.md
+++ b/content/weeklies/2025-12-15.md
@@ -65,7 +65,7 @@ draft: false
 - `vac:bi:rag:2025q4-rag-context`
   - Tested vLLM deployment.
 
--### vac:dst:
+### vac:dst:
 - `admin/misc`
   - OOO: 2 CC days.
   - Prepared DST retro and research call; opened commitments PR [roadmap#344](https://github.com/vacp2p/roadmap/pull/344).
