chore: added monthly

--- a/content/weeklies/2026-02-02.md
+++ b/content/weeklies/2026-02-02.md
@@ -147,7 +147,7 @@ draft: false
   - Reviewed failed tests and worked on merging [logos-messaging-interop-tests#155](https://github.com/logos-messaging/logos-messaging-interop-tests/pull/155) network-conditions updates.
 - `other notes`
   - Worked on closing older open PRs (canary, go-bindings).
-- [`ift-ts:qa:ift:2026q1-nim-libp2p-testing:kad-dht`](/qa/ift/2026q1-nim-libp2p-testing#kad-dht-protocol-testing) (deduced)
+- [`ift-ts:qa:ift:2026q1-nim-libp2p-testing:kad-dht`](/qa/ift/2026q1-nim-libp2p-testing#kad-dht-protocol-testing)
   - [nim-libp2p#2061](https://github.com/vacp2p/nim-libp2p/pull/2061) test(kad): misc.
   - [nim-libp2p#2053](https://github.com/vacp2p/nim-libp2p/issues/2053) issue: RespondedStatus.Failed never reached in iterative lookup.
   - [nim-libp2p#2054](https://github.com/vacp2p/nim-libp2p/pull/2054) fix(kad): use finished() for failed peers.
