chore: add infra updates 02 02

--- a/content/weeklies/2026-02-02.md
+++ b/content/weeklies/2026-02-02.md
@@ -166,6 +166,61 @@ draft: false
 - [`ift-ts:qa:status:2026q1-status-qa-mobile:release-testing`](/qa/status/2026q1-status-qa-mobile#release-testing)
   - Supported release testing with design calls (keycard, browser, sidebar).
 
+### ift-ts:infra:
+- LIDO
+  - Addressed questions about new rewards address for LIDO Curated Module fleet
+  - Deployed Commit-Boost to LIDO Mainnet hosts
+  - Added alerts for issues with MEV-Boost and Commit-Boost
+  - Checked results of deploying Ultrasound relay to all mainnet hosts
+  - Proposed new layout to LIDO, found no objections
+- ETHCTV
+  - Performed DKG and deployed starndard stVault cluster Obol Charon node
+- ETH2
+  - Upgrades to beacon node versions on all hosts
+- NIMBUS
+  - Developed Nix derivation for `nimbus-build-system` for re-use in Nim repos
+  - Debugged unresponsive `nimbus-eth1` nodes broken by `chain_serialize::replay` loop
+  - Addressed `libp2p` branch build issues on all Nimbus fleets
+  - Resolved payment issue for extra storage on Nimbus hosts
+  - Parially resolved low disk space issues on `nimbus.mainnet` hosts
+  - Fixed build issues with `nimbus-eth1` benchmark runs
+  - Deployed `syncv3` branch to `nimbus.mainnet` fleet
+- WAKU
+  - Debugging of issues with `status.prod` bootstrap node with Waku team
+  - Addressed healtcheck bug for Waku database services
+- LOGOS
+  - Created new Docker Hub org for `logos-storage` project
+  - Release pipeline for Logos App POC is ready on Jenkins
+  - Research into iOS app signing for Logos App POC
+- STATUS
+  - Worked on resolving build issues in `status-go` and `status-app`
+  - Improved Windows builds stability by hardcoding `PATH` order in `Jenkinsfile`
+  - Worked on improving Zerokit and Nim-SDS builds for `status-go`
+  - Continued work on submitting an F-Droid release of new mobile app
+  - Reduces size of Linux Docker build image by avoiding building QT
+  - Improvements to QML Linting CI checks for desktop
+  - Fixed issues with experimental Nwaku builds naming
+  - Looked into Rarible API issue due to lowering of API call limits, requested pricing
+- SITES
+  - Finished Status Hub self-hosted deployment, remaining CORS and COOP fixes
+  - Deployed https://lip.logos.co/ website via Caddy-Git
+  - Fixed expired GitHub token for Aptly server
+- OFFICE
+  - Re-deployed upgraded https://shlink.infra.status.im/ for short linking across org
+- HQ
+  - ElasticSearch indice layout changes and cleanup of spam Waku logs
+- CI
+  - Rolled out Nix 2.33 release ugprade to all Jenkins CI and GitHub runner hosts
+  - Resolved inconsistent versions of CMake and LLVM on MacOS CI hosts
+  - General cleanup of Jenkins master and slave hosts
+  - Rewrite of license scanner into Python for adding Licenses to repos
+  - Updated Jenins lib to support multiple GitHub orgs for GitHub Comment Manager
+  - Bootstrapped new GitHub runner macOS and Windows hosts
+  - Research into Atlantis as Terraform plan applying automation
+  - Fixed inconsistent loading of `PATH` in `zsh` on MacOS CI hosts
+- BI
+  - More experimentation with Kubernetes cluster for BI tools
+
 ### ift-ts:rfc:
 - `ift-ts:rfc:nomos:2026q1-rfc-iteration`
   - Merged remaining PRs with small fixes.
