--- a/content/weeklies/2026-02-09.md
+++ b/content/weeklies/2026-02-09.md
@@ -20,20 +20,20 @@ draft: false
 - DST: Advanced vaclab stack analysis with external-node deployment updates, data-usage dashboards, and component-level investigation planning.
 - INFRA: Stabilized critical infra by resolving logging, sync, and OOM incidents across LIDO, Nimbus, and Status fleets.
 - INFRA: Continued CI and platform upgrades, including nix-darwin migration work, runner rollout, and license-compliance automation.
-- NIM: Landed a large Nimble 1.0.0 maintenance batch across lockfile, cache, install, and command behavior fixes.
+- NIM: Landed a large Nimble 0.22.0 maintenance batch across lockfile, cache, install, and command behavior fixes.
 - NIM: Progressed core libs with JSON-RPC CBOR support, intops validation in Nimbus clients, and Chronos tutorial documentation.
 - P2P: Improved nim-libp2p maintenance for Nimbus compatibility and continued QUIC-related follow-up work.
 - P2P: Advanced cbindings, gossipsub partial-messages, and Logos core module support with active PRs across repos.
 - QA: Expanded coverage for RLN, messaging network conditions, nim-libp2p mix tests, and Status desktop/mobile E2E suites.
 - QA: Progressed token-gated Status-go functional tests and continued stabilization work for desktop and mobile automation.
 - RFC: Merged and reviewed RFC-index updates across datasets, OpChan, and Merkle tree iterations.
-- RFC: Continued spec-culture and RFC-process support activities, including tooling and template preparation for project leads.
-- SC: Progressed Status L2 contract maintenance and delivered docs/deployment updates in monorepo and token-v2 repos.
-- SC: Continued attestation-track exploration with presentation delivery and prototype implementation work in LSSA-related code.
+- RFC: Continued spec-culture and LIP-process support activities and preparing presentation for the all hands/townhall.
+- SC: Progressed Status L2 contract maintenance and delivered docs/deployment updates.
+- SC: Did a presentation on Attestation Services and created a simple attestation program (inspired by Optimism Attestation Station).
 - SEC: Hardened secure-signing operations with localsafe image deployment and Safe transaction workflow monitoring.
 - SEC: Continued audit and incident follow-up work across Keycard, CI/release workflows, and infra remediation validation.
 - TKE: Advanced Logos tokenomics across digital-twin baselining, fundraise modeling, litepaper drafting, and LBP simulation.
-- TKE: Progressed Nomos stress-test design and broader cross-unit support for PS activations, incentive planning, and research outputs.
+- TKE: Progressed Logos Blockchain stress-test design.
 - WEB: Advanced SN Hub work through proxy refactoring, QA wallet coordination, and Karma SDK implementation scaffolding.
 - WEB: Continued wallet extension and maintenance delivery with QA fixes, NFT endpoint updates, and connector/content improvements.
 
