chore: weeklies 02 16 infra

--- a/content/weeklies/2026-02-16.md
+++ b/content/weeklies/2026-02-16.md
@@ -20,6 +20,8 @@ draft: false
 - DST: Progressed 10ksim tooling and analysis-bridge changes, with key PRs prepared or under review.
 - NIM: Released Nimble 0.22.0 and merged a broad set of installer, lockfile, cache, and docs improvements.
 - NIM: Advanced core-libs work on JSON-RPC/CBOR, language-server issue triage, and Chronos tutorial completion.
+- INFRA: Fixed Nethermind RPC request errors by enabling admin module.
+- INFRA: Deployment of test NFT Proxy API service for Status application.
 - P2P: Advanced QUIC/Nimbus stabilization and nim-libp2p maintenance, including merged fixes and follow-up open PRs.
 - P2P: Continued Logos module and partial-messages extension work with additional merged and in-progress contributions.
 - QA: Expanded automation across Zerokit serialization paths, status-go functional tests, and Status desktop/mobile suites.
@@ -68,6 +70,60 @@ draft: false
   - Added Keycloak-only IdP setup, libp2p metrics labels, Hubble scraping, and storage/topology adjustments.
   - Investigated metal-01 Internet reachability issues; applied temporary workload pinning workaround.
   - Published traffic-share analysis in [Notion](https://www.notion.so/External-node-as-K3S-Master-2fe8f96fb65c80a49316ec4a3841f317?source=copy_link#3098f96fb65c80b5b713e86c4ddaa749).
+
+### ift-ts:infra:
+- LIDO
+  - Research into unnatural peer growth noticed for Nethermind nodes
+  - Split Attestation delay alerts into BN and VC, making latter critical
+  - Fixed Nethermind RPC request errors by enabling admin module
+  - Fixed dashboard for Missing Proposals in Grafana
+  - Optimized ClickHouse query for missed proposals
+- ETHCTV
+  - Completed DKG for Strategy pool and deployed Charon node
+  - Obol Charon node Nix service definition and deployment
+- NIMBUS
+  - Upgrades of Sepolia fleet node software and fixes to Ansible setup
+- WAKU
+  - Debugging of WSS connectivity issues on `status.prod` DO host
+  - Added more alerts for monitoring `status.prod` fleet health
+- LOGOS
+  - Help with testing simple Qt POC app Nix build for MacOS platform
+  - Continued work on fixing Nix built Logos POC App for MacOS platform
+  - Ongoing work to get Logos org authorized for Windows DigiCert certificates
+- STATUS
+  - Deployment of test NFT Proxy API service for Status application
+  - Debugging of Rust build failures for Windows Status app builds
+  - Debugging of Windows Nim build failures caused by `nimcache` folder
+  - More work on Status Network Hub self-hosted site and API
+  - More research into flaky Windows E2E tests on some hosts
+  - Ongoing work to get F-Droid builds working locally and on GitLab
+- SITES
+  - Helped with publishing resources links to contributors page
+  - Moved `vac.dev` websites to `research.logos.co` domain
+  - Moved `forum.vac.dev` to `forum.research.logos.co` domain
+- OFFICE
+  - Deployment of Wordpres and Drupal for evaluation with CiviCRM
+  - Migrating OpenKM away from SwissMadeHost discontinuing VPS service
+  - Fixed checks for keycloak database backups
+- MISC
+  - Deployed missing server for VacLab Kubernetes cluster
+  - Deployed additional Nescience research host
+  - Ongoing work to bridge Signal with Logos Discord chats
+- BI
+  - Resolved IP address conflicts for BI test Kubernetes cluster setup
+  - Improvements to LLVM setup, OpenWebUI improvements
+- HQ
+  - Cleanup of too many ElasticSearch indices, size-based rollover setup
+  - Debuged Kuma Waku canary check trying to re-use already used port
+  - Found Waku Cluster ID misconfiguration with Waku canaries
+  - Investigation into slow Grafana queries on Cortex cluster
+  - Finished fixing Vault manager certificate issues
+- CI
+  - Helped with Nimble Nix derivation for Nim-SDS
+  - Helped iOS devs get added with correct permissions to Apple team
+  - Cleanup of our Nix binary cache of old mobile packages
+  - Finishing touches on Ansible role for Windows GitHub Runner
+  - Creation of our own Scoop bucket to lock down software versions
 
 ### ift-ts:nim:
 - [`ift-ts:nim:ift:2026q1-nimble:nimble-1.0.0`](/nim/ift/2026q1-nimble#nimble-1-0-0)
