--- a/content/weeklies/2026-02-23.md
+++ b/content/weeklies/2026-02-23.md
@@ -26,17 +26,18 @@ draft: false
 - P2P: Prepared `nim-libp2p` v1.16.0 and fixed multiple QUIC issues across `nim-libp2p`, `nim-lsquic`, and Nimbus integration.
 - P2P: Advanced Logos libp2p module stability/features with CI fixes, mix integration work, and Windows support.
 - QA: Continued Zerokit serialization/FFI error coverage and status-go token-gated community functional tests.
-- QA: Expanded Status desktop/mobile QA with release-testing issue reporting, iOS Appium pilot work, and SN Hub E2E follow-up.
+- QA: Status Mobile iOS Appium pilot started.
+- QA: Added anvil support to SN Hub E2E tests.
 - RFC: Shared a presentation related to LIPs.
-- RFC: No additional public Last week RFC execution items were reported.
 - SC: Continued Status L2 contract maintenance and follow-up fixes, including Gauge Voter updates and dependency corrections.
-- SC: Advanced Logos AMM research/planning work and ongoing LEE support fixes and roadmap maintenance.
+- SC: Advanced Logos AMM (Automated Market Maker) research/planning work and ongoing LEE support fixes.
 - SEC: Continued Keycard remediation validation and follow-up security reviews across IFT, Status, Waku, and VAC repositories.
 - SEC: Advanced security automation and support workflows while triaging new vulnerabilities, incidents, and Waku bug-bounty reports.
 - TKE: Refined the Logos digital-twin flywheel model and incorporated new liquidity and privacy analysis inputs.
 - TKE: Finalized Nomos DSE spec revisions and continued xPrize plus PS activation coordination work.
-- WEB: Progressed SN Hub self-hosted/proxy/Karma work and continued rate-limiting and QA collaboration.
-- WEB: Delivered broad maintenance and content/platform updates across Status web properties, Logos sites, and forum improvements.
+- WEB: Logos contribute portal and logos forum improvements
+- WEB: Progressed SN Hub self-hosted(released)/proxy/Karma work.
+- WEB: Delivered broad maintenance and content/platform updates across Status web properties.
 
 ### ift-ts:bi:
 - [`ift-ts:bi:ift:2026q1-ift-smart-contract-monitoring:status-network-vault`](/bi/ift/2026q1-ift-smart-contract-monitoring#status-network-vault)
